# ANOVA

./: ANOVA.ipynb  ANOVA_01.ipynb  ANOVA_02.ipynb  ANOVA_03.ipynb  anova1.ipynb  pyproject.toml
data/: ANOVA_01_2026-01-27_B.csv  ANOVA_02_2025-09-01_B.csv  ANOVA_03_2026-01-27_B.csv
