[project]
name = "anova"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pandas-stubs~=3.0.0",
    "pingouin>=0.5.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "scipy-stubs~=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
